--- a/boot-security/src/main/resources/templates/login_page.html
+++ b/boot-security/src/main/resources/templates/login_page.html
@@ -5,7 +5,7 @@
     </title>
 </head>
 <body>
-<form action="/login">
+<form action="/login" method="post">
     用户名： <input type="text" name="username" value="admin"> <br>
     密  码：<input type="password" name="password" value="123456"> <br>
     <input type="submit" value="提交">
